removing coverage restrictions to errors.go file

--- a/.testcoverage.yml
+++ b/.testcoverage.yml
@@ -28,5 +28,6 @@ threshold:
 exclude:
   # Exclude files or packages matching their paths
   paths:
+    - ^errors.go
     - ^internal/model.go$
     - ^pkg/bar     # exclude package `pkg/bar`
