--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -32,6 +32,7 @@ jobs:
       run: go test ./... -coverprofile=./cover.out -covermode=atomic -coverpkg=./...
 
     - name: check test coverage
+      if: matrix.os == 'ubuntu-latest'
       uses: vladopajic/go-test-coverage@v2
       with:
         config: ./.github/.testcoverage.yml
