chore(lint): updating pre-commit

--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -11,6 +11,10 @@ permissions:
   # pull-requests: read
 
 jobs:
+  commitlint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: ahmadnassri/action-commit-lint@v2
   go-mod:
     runs-on: ubuntu-latest
     steps:
