--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -17,7 +17,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        go: ["1.20", "1.21", "1.22", oldstable, stable]
+        go: ["1.20", "1.21", oldstable, stable]
         os: [ubuntu-latest, macos-latest]
     steps:
       - uses: actions/checkout@v4
