--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -64,6 +64,7 @@ jobs:
     name: markdown
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
       - uses: DavidAnson/markdownlint-cli2-action@v19
         with:
           globs: '**/*.md'
