--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -15,12 +15,12 @@ updates:
         patterns:
           - "*"
     commit-message:
-      prefix: "chore(deps)"
+      prefix: "chore"
       include: "scope"
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
       interval: "monthly"
     commit-message:
-      prefix: "chore(deps)"
+      prefix: "chore"
       include: "scope"
