--- a/.markdownlint-cli2.jsonc
+++ b/.markdownlint-cli2.jsonc
@@ -16,7 +16,7 @@
     },
     // MD033/no-inline-html : Inline HTML : https://github.com/DavidAnson/markdownlint/blob/v0.32.1/doc/md033.md
     "MD033": {
-      "allowed_elements": []
+      "allowed_elements": ["img"]
     }
   }
 }
