--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -2,6 +2,7 @@
 name: linters
 on:
   push:
+    branches: ["main"]
   pull_request:
 
 permissions:
@@ -56,8 +57,8 @@ jobs:
 
       - name: Check spelling of entire workspace
         uses: crate-ci/typos@v1
-  markdown:
-    name: markdown
+  markdownlint:
+    name: markdownlint
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
