chore: updating to golangci-lint v2.2

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -50,6 +50,7 @@ linters:
     - thelper
     - varnamelen
     - wrapcheck
+    - wsl  # Deprecated, use wsl_v5 instead.
     - zerologlint
 
   settings:
