--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -18,7 +18,7 @@ jobs:
       - uses: actions/checkout@v6
       - uses: actions/setup-go@v6
         with:
-          go-version: 1.23
+          go-version: oldstable
       - name: Check go mod
         run: |
           go mod tidy
@@ -31,7 +31,7 @@ jobs:
       - id: govulncheck
         uses: golang/govulncheck-action@v1
         with:
-          go-version-input: 1.23.0
+          go-version-input: oldstable
           go-package: ./...
   spell:
     name: "Spell check"
